Skriver til zip for hver fagsak-dump istedenfor å først laste alle dumpene og så skrive